add new endpoits, dont working again, because some endpoint is missing
